chore: rename package to use @hamsterbase scope
This commit changes the package name from 'capacitor-plugin-safe-area' to '@hamsterbase/capacitor-plugin-safe-area' to align with the organization's naming convention and better identify it as an official HamsterBase package.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capacitor-plugin-safe-area",
+  "name": "@hamsterbase/capacitor-plugin-safe-area",
   "version": "4.0.0",
   "description": "a capacitor plugin to get SafeArea info on Android and IOS",
   "main": "dist/plugin.cjs.js",
