chore: add public access to npm publish config
This commit adds the `access: public` configuration to ensure the package can be published to the public npm registry. This is necessary for proper package distribution and visibility on npmjs.com.

--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
   "eslintConfig": {
     "extends": "@ionic/eslint-config/recommended"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "capacitor": {
     "ios": {
       "src": "ios"
