--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "ios/Sources",
     "ios/Tests",
     "Package.swift",
-    "CapacitorPluginSafeArea.podspec"
+    "HamsterbaseCapacitorPluginSafeArea.podspec"
   ],
   "author": "zhuxian",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AlwaysLoveme/capacitor-plugin-safe-area.git.git"
+    "url": "git+https://github.com/hamsterbase/capacitor-plugin-safe-area.git.git"
   },
   "bugs": {
-    "url": "https://github.com/AlwaysLoveme/capacitor-plugin-safe-area.git/issues"
+    "url": "https://github.com/hamsterbase/capacitor-plugin-safe-area.git/issues"
   },
   "keywords": [
     "capacitor",
